# velogames

./: .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py  velogames.spec
.github/workflows/: release.yaml
velogames/: __init__.py  cli.py  commands.py  containers.py  main.py  models.py  parser.py  session.py  solver.py  typer.py  utils.py
velogames/commands/: __init__.py  league.py  optimal.py  riders.py
velogames/parsers/: league.py  riders.py  team.py
