[tool.poetry]
name = "velogames"
version = "0.1.0"
description = "Small tool for scraping Velogames data"
authors = ["Ossi Rajuvaara <ossi@robocorp.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
beautifulsoup4 = "^4.9.3"
click = "^8.0.1"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
pylint = "^2.8.3"
mypy = "^0.910"

[tool.poetry.scripts]
velogames = 'velogames.cli:run'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
