[tool.poetry]
name = "velogames"
version = "0.2.0"
description = "A command-line tool for parsing data from Velogames"
repository = "https://github.com/osrjv/velogames"
authors = ["Ossi Rajuvaara <ossi@robocorp.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
beautifulsoup4 = "^4.9.3"
pydantic = "^1.8.2"
typer = "^0.3.2"
rich = "^10.5.0"
colorama = "^0.4.4"
importlib-metadata = { version="^4.6.1", python="<3.8" }

[tool.poetry.dev-dependencies]
black = "^21.6b0"
pylint = "^2.8.3"
mypy = "^0.910"
types-requests = "^2.25.0"
pyinstaller = "^4.3"

[tool.poetry.scripts]
velogames = 'velogames.main:app'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
